--- a/parkingapp/templates/dash_users.html
+++ b/parkingapp/templates/dash_users.html
@@ -5,6 +5,7 @@
 
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Пользователи</h1>
+    <a href="{% url 'parkingapp:signadmin' %}" class="text-decoration-none mb-2"><i class="bi bi-plus-circle"></i></a>
   </div>
 
   <div class="table-responsive small">
