--- a/parkingapp/templates/addparking.html
+++ b/parkingapp/templates/addparking.html
@@ -1,12 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'dash_base.html' %}
 {% block content %}
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
   <div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog" role="document">
       <div class="modal-content rounded-4 shadow border">
         <div class="modal-header p-5 pb-4 border-bottom-0">
           <h1 class="fw-bold mb-0 fs-2">Добавить парковку</h1>
         </div>
-  
+
         <div class="modal-body p-5 pt-0">
           <form method="post">
             {% csrf_token %}
@@ -27,5 +28,6 @@
         </div>
       </div>
     </div>
-</div>
+  </div>
+</main>
 {% endblock %}
