--- a/parkingapp/templates/coupon.html
+++ b/parkingapp/templates/coupon.html
@@ -1,22 +1,32 @@
-{% extends 'base.html' %}
+{% extends 'dash_base.html' %}
 {% block content %}
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-        <div class="row align-items-center g-lg-5 py-5">
-          <div class="col-lg-7 text-center text-lg-start">
-            <h1 class="display-5 fw-bold lh-1 text-body-emphasis mb-3">Предоставить льготу</h1>
-            <p class="col-lg-10 fs-4">Введите идентификационный номер чека, который вам предоставит пользователь.</p>
-          </div>
-          <div class="col-md-10 mx-auto col-lg-5">
-            <form class="p-4 p-md-5 shadow border bg-white rounded-4" method="post">
-              {% csrf_token %}
-              <div class="form-floating mb-3 rounded-4">
-                {{ form.user_reciept_id }}
-                <label for="{{ form.user_reciept_id.id_for_label }}">ID чека</label>
-              </div>
-              <button class="w-100 btn btn-lg rounded-4 btn-primary" type="submit">Обнулить чек</button>
-              <small>{{ form.errors }}</small>
-            </form>
-          </div>
-        </div>
-    </div>
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+  <div class="col-sm-10 mx-auto col-lg-6 mt-5">
+    <form class="p-4 p-md-5 shadow border bg-white rounded-4" method="post">
+      {% csrf_token %}
+      <h1 class="fw-bold mb-3 fs-2">По номеру телефона</h1>
+      <div class="form-floating mb-3 rounded-4">
+        <input class="form-control rounded-4" placeholder="Номер">
+        <label for="">Номер телефона</label>
+      </div>
+      <button class="w-100 btn btn-lg rounded-4 btn-primary" type="submit">Обнулить чек</button>
+      <small>{{ form.errors }}</small>
+    </form>
+  </div>
+  <div class="col-sm-12 mx-auto mt-5 text-center col-lg-1">
+    <h5>или</h5>
+  </div>
+  <div class="col-sm-10 mx-auto col-lg-6 mt-5">
+    <form class="p-4 p-md-5 shadow border bg-white rounded-4" method="post">
+      {% csrf_token %}
+      <h1 class="fw-bold mb-3 fs-2">По автомобильному номеру</h1>
+      <div class="form-floating mb-3 rounded-4">
+        <input class="form-control rounded-4" placeholder="Номер">
+        <label for="">Автомобильный номер</label>
+      </div>
+      <button class="w-100 btn btn-lg rounded-4 btn-primary" type="submit">Обнулить чек</button>
+      <small>{{ form.errors }}</small>
+    </form>
+  </div>
+</main>
 {% endblock %}
