--- a/parkingapp/templates/dash_parks.html
+++ b/parkingapp/templates/dash_parks.html
@@ -5,7 +5,10 @@
 
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Парковки</h1>
-    <small class="text-danger">{{ error }}</small>
+    <div>
+      <small class="text-danger text">{{ error }}</small>
+      <a href="{% url 'parkingapp:addparking' %}" class="text-decoration-none mb-2"><i class="bi bi-plus-circle"></i></a>
+    </div>
   </div>
 
   <div class="table-responsive small">
