--- a/parkingapp/templates/addparking.html
+++ b/parkingapp/templates/addparking.html
@@ -1,33 +1,32 @@
 {% extends 'dash_base.html' %}
 {% block content %}
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-  <div class="modal modal-sheet position-static d-block p-4 py-md-5" tabindex="-1" role="dialog" id="modalSignin">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content rounded-4 shadow border">
-        <div class="modal-header p-5 pb-4 border-bottom-0">
-          <h1 class="fw-bold mb-0 fs-2">Добавить парковку</h1>
+  <form method="post">
+    {% csrf_token %}
+    <div class="col-md-7 col-lg-8 mt-3">
+      <div class="row">
+        <h4 class="mb-3 col-6">Новая парковка</h4>
+        <small class="text-end text-danger col-6">{{ error }}</small>
+      </div>
+      <div class="row g-3">
+        <div class="col-12">
+          <label for="username" class="form-label">Адрес парковки</label>
+          {{form.address}}
         </div>
 
-        <div class="modal-body p-5 pt-0">
-          <form method="post">
-            {% csrf_token %}
-            <div class="form-floating mb-3">
-              {{form.address}}
-              <label for="{{ form.address.id_for_label }}">Адрес</label>
-            </div>
-            <div class="form-floating mb-3">
-              {{form.max_parking_lots}}
-              <label for="{{ form.max_parking_lots.id_for_label }}">Количество мест</label>
-            </div>
-            <div class="form-floating mb-3">
-              {{form.price}}
-              <label for="{{ form.price.id_for_label }}">Цена за час</label>
-            </div>
-            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Добавить</button>
-          </form>
+        <div class="col-sm-6">
+          <label for="firstName" class="form-label">Количество мест</label>
+          {{form.max_parking_lots}}
+        </div>
+
+        <div class="col-sm-6">
+          <label for="lastName" class="form-label">Цена за час</label>
+          {{form.price}}
         </div>
       </div>
+
+      <button class="w-100 mt-4 btn btn-lg rounded-4 btn-primary" type="submit">Добавить</button>
     </div>
-  </div>
+  </form>
 </main>
 {% endblock %}
