--- a/parkingapp/templates/coupon.html
+++ b/parkingapp/templates/coupon.html
@@ -1,32 +1,43 @@
 {% extends 'dash_base.html' %}
 {% block content %}
+<style>
+  #uppercar::placeholder {
+    text-transform: none;
+  }
+</style>
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-  <div class="col-sm-10 mx-auto col-lg-6 mt-5">
-    <form class="p-4 p-md-5 shadow border bg-white rounded-4" method="post">
-      {% csrf_token %}
-      <h1 class="fw-bold mb-3 fs-2">По номеру телефона</h1>
-      <div class="form-floating mb-3 rounded-4">
-        <input class="form-control rounded-4" placeholder="Номер">
-        <label for="">Номер телефона</label>
+  <form method="post">
+    {% csrf_token %}
+    <div class="col-md-7 col-lg-8 mt-3">
+      <div class="row">
+        <h4 class="mb-3 col-6">Выдача льготы</h4>
+        <small class="text-end text-danger col-6">{{ error }}</small>
       </div>
-      <button class="w-100 btn btn-lg rounded-4 btn-primary" type="submit">Обнулить чек</button>
-      <small>{{ form.errors }}</small>
-    </form>
-  </div>
-  <div class="col-sm-12 mx-auto mt-5 text-center col-lg-1">
-    <h5>или</h5>
-  </div>
-  <div class="col-sm-10 mx-auto col-lg-6 mt-5">
-    <form class="p-4 p-md-5 shadow border bg-white rounded-4" method="post">
-      {% csrf_token %}
-      <h1 class="fw-bold mb-3 fs-2">По автомобильному номеру</h1>
-      <div class="form-floating mb-3 rounded-4">
-        <input class="form-control rounded-4" placeholder="Номер">
-        <label for="">Автомобильный номер</label>
+      <div class="row g-3">
+        <div class="col-sm-6">
+          <label for="firstName" class="form-label">По номеру телефона</label>
+          {{ form.tel }}
+        </div>
+
+        <div class="col-sm-6">
+          <label for="lastName" class="form-label">По автомобильному номеру</label>
+          {{ form.car }}
+        </div>
       </div>
-      <button class="w-100 btn btn-lg rounded-4 btn-primary" type="submit">Обнулить чек</button>
-      <small>{{ form.errors }}</small>
-    </form>
-  </div>
+
+      <button class="w-100 mt-4 btn btn-lg rounded-4 btn-primary" type="submit">Выдать льготу</button>
+    </div>
+  </form>
 </main>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+
+    const inputElement = document.getElementById('tel') // ищем наш единственный input
+    const maskOptions = { // создаем объект параметров
+      mask: '+{7}(000)000-00-00' // задаем единственный параметр mask
+    }
+    IMask(inputElement, maskOptions) // запускаем плагин с переданными параметрами
+
+  })
+</script>
 {% endblock %}
