--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -119,7 +119,7 @@
     }
   </style>
 
-
+  <script src="https://unpkg.com/imask"></script>
   <!-- Custom styles for this template -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
@@ -133,17 +133,14 @@
       <li class="nav-item text-nowrap">
         <button class="nav-link px-3 text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSearch"
           aria-controls="navbarSearch" aria-expanded="false" aria-label="Toggle search">
-          <svg class="bi">
-            <use xlink:href="#search" />
-          </svg>
+
         </button>
       </li>
       <li class="nav-item text-nowrap">
         <button class="nav-link px-3 text-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu"
           aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <svg class="bi">
-            <use xlink:href="#list" />
-          </svg>
+          <span class="visually-hidden">Toggle
+            navigation</span><span class="navbar-toggler-icon"></span>
         </button>
       </li>
     </ul>
@@ -185,9 +182,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:dash_corr' %}">
                   <i class="bi bi-exclamation-circle-fill"></i>
-                  Поиск пидоров
+                  Подозрительная активность
                 </a>
               </li>
 
@@ -215,26 +212,26 @@
                   </a>
                 </li>
               </ul>
-                <h6
-                  class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
-                  <span>Действия</span>
-                </h6>
-                <ul class="nav flex-column mb-auto">
-                  <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:barrier' %}">
-                      <i class="bi bi-door-open-fill"></i>
-                      Управление шлагбаумом
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:coupon' %}">
-                      <i class="bi bi-receipt-cutoff"></i>
-                      Выдача льгот
-                    </a>
-                  </li>
-                  
-                </ul>
-                <h6
+              <h6
+                class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
+                <span>Действия</span>
+              </h6>
+              <ul class="nav flex-column mb-auto">
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:barrier' %}">
+                    <i class="bi bi-door-open-fill"></i>
+                    Управление шлагбаумом
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:coupon' %}">
+                    <i class="bi bi-receipt-cutoff"></i>
+                    Выдача льгот
+                  </a>
+                </li>
+
+              </ul>
+              <h6
                 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
                 <span>Добавление</span>
               </h6>
@@ -251,19 +248,19 @@
                     Новый пользователь
                   </a>
                 </li>
-                
+
               </ul>
 
-                <hr class="my-3">
+              <hr class="my-3">
 
-                <ul class="nav flex-column mb-auto">
-                  <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="#">
-                      <i class="bi bi-box-arrow-up"></i>
-                      Экспорт
-                    </a>
-                  </li>
-                </ul>
+              <ul class="nav flex-column mb-auto">
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                    <i class="bi bi-box-arrow-up"></i>
+                    Экспорт
+                  </a>
+                </li>
+              </ul>
           </div>
         </div>
       </div>
