чек красивее самой арины тарановы

--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -76,8 +76,8 @@
       <small class="col-4 text-secondary">ID чека</small>
     </div>
     <div class="row text-center mb-4">
-      <h5 class="col-4">75 минут</h5>
-      <h5 class="col-4">123 ₽</h5>
+      <h5 class="col-4">{{ sex.2 }}:{{sex.3}}</h5>
+      <h5 class="col-4">{{ sex.4 }} ₽</h5>
       <h5 class="col-4">{{ sex.0.pk }}</h5>
     </div>
     <form method="post">
