вы не поверите ФРОНТЕНДЕР СДЕЛАЛ КОММИТ!!!

--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -255,7 +255,7 @@
 
               <ul class="nav flex-column mb-auto">
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" href="{% url 'parkingapp:export' %}">
                     <i class="bi bi-box-arrow-up"></i>
                     Экспорт
                   </a>
