--- a/parkingapp/templates/endparking.html
+++ b/parkingapp/templates/endparking.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
-
-
+{% block title %}{{ title }}{% endblock %}
 {% block content %}
 <style>
   .bla {
-      width: calc(100vw - 2rem);
+    width: calc(100vw - 2rem);
   }
 </style>
 <div class="col-12 mx-auto col-lg-6 mt-0 mt-lg-5 mb-3 bla mt-3">
