--- a/parkingapp/templates/parking_lot.html
+++ b/parkingapp/templates/parking_lot.html
@@ -4,5 +4,6 @@
     <h1 class="display-6 text-body-emphasis">Введите код для въезда на парковку</h1>
     <h1 class="display-1 text-body-emphasis fw-bolder">{{parking.code}}</h1>
     <p>{{parking.address}}</p>
+    <p class="text-danger">{{error}}</p>
 </div>
 {% endblock %}
