--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -22,7 +22,7 @@
   <div class="container">
     <nav class="navbar navbar-light navbar-expand-md d-sticky py-3 border-bottom" style="background: inherit;">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center" href="{% url 'parkingapp:esp' %}">
+        <a class="navbar-brand d-flex align-items-center" href="">
           <span class="fw-semibold">ЕСП</span></a>
         <button class="navbar-toggler border-0" data-bs-toggle="collapse" onclick="pos()" data-bs-target="#navcol-3"><span
             class="visually-hidden">Toggle
