--- a/parkingapp/templates/dash_fin.html
+++ b/parkingapp/templates/dash_fin.html
@@ -1,10 +1,11 @@
 {% extends 'dash_base.html' %}
-{% block actfull %}active{% endblock %}
+
 {% block content %}
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Отчет по системе</h1>
+    <small class="text-danger text">{{ error }}</small>
     <div class="mb-2 mb-md-0">
       <form method="POST">
         {% csrf_token %}
