--- a/parkingapp/templates/index.html
+++ b/parkingapp/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block active_parking %}active{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 {% block content %}
 {% load static %}
-
 <style>
   #myMap {
     width: 100vw;
