--- a/parkingapp/templates/coupon.html
+++ b/parkingapp/templates/coupon.html
@@ -16,7 +16,7 @@
       <div class="row g-3">
         <div class="col-sm-6">
           <label for="firstName" class="form-label">По номеру телефона</label>
-          {{ form.tel }}
+          {{ form.phone }}
         </div>
 
         <div class="col-sm-6">
