--- a/parkingapp/templates/sign.html
+++ b/parkingapp/templates/sign.html
@@ -22,16 +22,16 @@
             <label for="{{ form.username.id_for_label }}">Имя пользователя</label>
           </div>
           <div class="form-floating mb-3">
-            {{ form.tel }}
+            {{ form.phone_number }}
             <label for="{{ form.card_num_id_for_label }}">Номер телефона</label>
           </div>
 
           <div class="form-floating mb-3">
-            {{ form.car }}
+            {{ form.car_num }}
             <label for="{{ form.card_num_id_for_label }}">Автомобильный номер</label>
           </div>
           <div class="form-floating mb-3">
-            {{ form.card }}
+            {{ form.card_num }}
             <label for="{{ form.card_num_id_for_label }}">Данные карты</label>
           </div>
           <small class="text-body-secondary">Введите 4 последние цифры номера банковской карты</small>
