--- a/parkingapp/templates/base.html
+++ b/parkingapp/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,7 @@
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"></script>
   <script src="https://api-maps.yandex.ru/2.1.47/?lang=ru_RU&amp;apikey=fe7387f0-4485-4341-91bd-7b6427f658d7"
-    type="text/sjavascript"></script>
+    type="text/javascript"></script>
   <script src="https://unpkg.com/imask"></script>
   <title>ЕСП</title>
   <link rel="icon" type="image/x-icon" href="{% static 'fav.ico' %}">
@@ -24,20 +25,24 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="">
           <span class="fw-semibold">ЕСП</span></a>
-        <button class="navbar-toggler border-0" data-bs-toggle="collapse" onclick="pos()" data-bs-target="#navcol-3"><span
-            class="visually-hidden">Toggle
+        <button class="navbar-toggler border-0" data-bs-toggle="collapse" onclick="pos()"
+          data-bs-target="#navcol-3"><span class="visually-hidden">Toggle
             navigation</span><span class="navbar-toggler-icon"></span></button>
         <div id="navcol-3" class="collapse navbar-collapse">
           <form method="post" action="enter">
             {% csrf_token %}
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item mx-1"><a class="nav-link {% block active_profile %}{% endblock %}" href="{% url 'parkingapp:profile' %}">Профиль</a></li>
-              <li class="nav-item mx-1"><a href="{% url 'parkingapp:index' %}" class="nav-link {% block active_parking %}{% endblock %}"
-                  aria-current="page">Парковка</a></li>
+              <li class="nav-item mx-1"><a class="nav-link {% block active_profile %}{% endblock %}"
+                  href="{% url 'parkingapp:profile' %}">Профиль</a></li>
+              <li class="nav-item mx-1"><a href="{% url 'parkingapp:index' %}"
+                  class="nav-link {% block active_parking %}{% endblock %}" aria-current="page">Парковка</a></li>
               {% if not user.is_authenticated %}
-              <li class="nav-link text-primary mx-1"><a class="text-decoration-none" href="{% url 'parkingapp:enter' %}">Вход</a> / <a href="{% url 'parkingapp:sign' %}" class="text-decoration-none">Регистрация</a></li>
+              <li class="nav-link text-primary mx-1"><a class="text-decoration-none"
+                  href="{% url 'parkingapp:enter' %}">Вход</a> / <a href="{% url 'parkingapp:sign' %}"
+                  class="text-decoration-none">Регистрация</a></li>
               {% else %}
-              <li class="nav-item mx-1"><a href="{% url 'parkingapp:logout' %}" class="nav-link rounded-4">Выход</a></li>
+              <li class="nav-item mx-1"><a href="{% url 'parkingapp:logout' %}" class="nav-link rounded-4">Выход</a>
+              </li>
               {% endif %}
             </ul>
           </form>
